@@ -1,3 +1,9 @@
+2013-07-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCClrange.c,
+	  support/regression/tests/bug-2197.c:
+	  Fix handling of pointer write in live-range splitting, fixing bug #2197.
+
 2013-07-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/ralloc.c,
